- NEW: Various new layout options in revision graph. (Stefan Fuhrmann)
- NEW: Log content will be cached. See issue #45 for details. (Stefan Fuhrmann)
- NEW: Repository properties will be cached. Reduces or even eliminates 
       latency in log dialog and revison graph. (Stefan Fuhrmann)
- NEW: A warning is shown when a modified file is about to be deleted
       in the various dialogs. See issue #274 for details. (Stefan)
- NEW: External diff/merge programs can be specified by mime-type,
       not just by extension. See issue #115 for details. (Stefan)
- NEW: Search by "whole word" and wrap around at the bottom of
       the files when the word isn't found. 
       A history of previous searches is shown in the new combobox.
       The search will now start either at where the previous search
       stopped, or the selected line if there is one. Bringing up
       the search dialog will force the search to start at the top.
       See issue #271 for details. (Jeremy Whitby, Stefan)
- NEW: Client-side hook scripts. See issue #137 and #322 for details. (Stefan)
- NEW: Integration with repo viewers. See issue #201 for details. (Stefan)
- NEW: Applying a patchfile from clipboard. Directly from the explorer
       context menu as well as from the TortoiseMerge "Open" dialog.
       See issue #270 for details. (Stefan)
- NEW: The log dialog shows the number of revisions, start and end revision
       and the number of selected revisions. 
       See issue #276 for details. (Stefan)
- NEW: Ability to 'repair' a move/rename which was done without using the
       Subversion commands. Repairing works by selecting two files
       where one is unversioned and the other missing, then choose "repair move"
       from the context menu. See issue #273 for details. (Stefan)
- NEW: TortoiseMerge shows the encoding and line ending style in its
       status bar. See issue #279 for details. (Stefan)
- NEW: Support more image formats in TortoiseIDiff by using the FreeImage